<resources>
    <string name="app_name">Calculator</string>
    <string name="operation_text">Operation</string>
    <string name="result_text">Result</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="multiply_text">*</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="subtraction_text">-</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="addition_text">+</string>
    <string name="zero_text">0</string>
    <string name="division_text">/</string>
    <string name="equal_text">=</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
